@@ -42,11 +42,7 @@ public class RepositoryQueriesTest extends NbTestCase {
     protected void setUp() throws Exception {
         super.setUp();
     }
-    
-    public void testAlternativeQueryProvider() throws URISyntaxException {
-        
-    }
-    
+
     public void testAlternativeResult() throws URISyntaxException {
         MockServices.setServices(TestIndexer1.class);
         
@@ -59,7 +55,7 @@ public class RepositoryQueriesTest extends NbTestCase {
     public void testTwoReposTwoQueryProviders() throws URISyntaxException {
         MockServices.setServices(TestIndexer1.class, TestIndexer2.class);
 
-        RepositoryQueries.Result<NBVersionInfo> result = RepositoryQueries.findArchetypesResult(Arrays.asList(TestIndexer1.REPO, TestIndexer2.REPO));
+        RepositoryQueries.Result<NBVersionInfo> result = RepositoryQueries.findArchetypesResult(List.of(TestIndexer1.REPO, TestIndexer2.REPO));
         assertEquals(2, result.getTotalResultCount());
         assertEquals(2, result.getReturnedResultCount());
         assertArtefactIds(result.getResults(), new String[] {TestIndexer1.ID, TestIndexer2.ID});
@@ -68,7 +64,7 @@ public class RepositoryQueriesTest extends NbTestCase {
     public void testTwoReposOneAccepted() throws URISyntaxException {
         MockServices.setServices(TestIndexer1.class);
         
-        RepositoryQueries.Result<NBVersionInfo> result = RepositoryQueries.findArchetypesResult(Arrays.asList(TestIndexer1.REPO, TestIndexer2.REPO));
+        RepositoryQueries.Result<NBVersionInfo> result = RepositoryQueries.findArchetypesResult(List.of(TestIndexer1.REPO, TestIndexer2.REPO));
         assertEquals(1, result.getTotalResultCount());
         assertEquals(1, result.getReturnedResultCount());
         assertArtefactIds(result.getResults(), new String[] {TestIndexer1.ID});
@@ -82,7 +78,7 @@ public class RepositoryQueriesTest extends NbTestCase {
         assertEquals(0, RepositoryQueries.findBySHA1Result(new File(""), Arrays.asList(NullQueryProvider.REPO)).getTotalResultCount());
         assertEquals(0, RepositoryQueries.findClassUsagesResult("", repos).getTotalResultCount());
         assertEquals(0, RepositoryQueries.findDependencyUsageResult("","","", repos).getTotalResultCount());
-        assertEquals(0, RepositoryQueries.findResult(Collections.EMPTY_LIST, repos).getTotalResultCount());
+        assertEquals(0, RepositoryQueries.findResult(Collections.emptyList(), repos).getTotalResultCount());
         assertEquals(0, RepositoryQueries.findVersionsByClassResult("", repos).getTotalResultCount());
         
         RepositoryPreferences.getInstance().addOrModifyRepositoryInfo(NullQueryProvider.REPO);
@@ -92,7 +88,7 @@ public class RepositoryQueriesTest extends NbTestCase {
     private void assertArtefactIds(List<NBVersionInfo> infos, String[] ids) {
         assertEquals(ids.length, infos.size());
         List<String> returnedIds = new ArrayList<>(infos.size());
-        infos.stream().forEach((info) -> returnedIds.add(info.getArtifactId()));
+        infos.forEach((info) -> returnedIds.add(info.getArtifactId()));
         for (String id : ids) {
             assertTrue(returnedIds.contains(id));
         }
@@ -112,6 +108,7 @@ public class RepositoryQueriesTest extends NbTestCase {
         public NullQueryProvider() {
             this.repos = new RepositoryInfo[] {REPO};
         }
+        @Override
         protected String getID() {
             return ID;
         }
